# lost-hiker

./: .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  fix_format.py  pyproject.toml
.cursor/: rules
.cursor/tasks/: lost_hiker_act1_spine.yml  lost_hiker_belly_phase1.yml  lost_hiker_combat_phase1.yml  lost_hiker_curses_ui_rewrite.yml  lost_hiker_dialogue_npc_phase1.yml  lost_hiker_echo_and_brewing.yml  lost_hiker_echo_camp_phase1.yml  lost_hiker_echo_dialogue_patch.yml  lost_hiker_echo_tag_awareness.yml  lost_hiker_encounter_outcomes_phase1.yml  lost_hiker_encounters_rapport_phase1.yml  lost_hiker_exploration_phase3_look.yml  lost_hiker_exploration_phase_2.yml  lost_hiker_flavor_intro.yml  lost_hiker_forageables_expansion.yml  lost_hiker_forest_act1_spine.yml  lost_hiker_forest_balance_pass.yml  lost_hiker_forest_creatures_expansion.yml  lost_hiker_forest_expansion_phase1.yml  lost_hiker_forest_flavor_polish.yml  lost_hiker_forest_memory_phase1.yml  lost_hiker_glade_forest.yml  lost_hiker_hunger_cooking_phase1.yml  lost_hiker_kirin_intro_phase1.yml  lost_hiker_landmarks_phase1.yml  lost_hiker_micro_quest_polish.yml  lost_hiker_modular_race_core.yml  lost_hiker_npc_echo_tag_reactions.yml  lost_hiker_npc_tag_reactions_phase2.yml  lost_hiker_npcs_wave1.yml  lost_hiker_race_flavor_integration.yml  lost_hiker_races_expansion.yml  lost_hiker_seasons_phase1.yml  (+11 more)
docs/: AutoDocSummary.md  CODE_GUIDE.md  DOCUMENTATION_SUMMARY.md  Lost Hiker Codebase Briefing.md
lost_hiker/: __init__.py
save/: save.json
(+70 files in other folders)
